--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.1'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
-        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.5"
+//        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+//        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.5"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -30,12 +30,12 @@ allprojects {
 
 
 ext {
-    compileSdkVersion = 23
-    buildToolsVersion = '23.0.3'
+    compileSdkVersion = 30
+    buildToolsVersion = '30.0.2'
 
-    targetSdkVersion = 22
+    targetSdkVersion = 30
     //主程序版本
-    minSdkVersion = 16
+    minSdkVersion = 21
     versionCode = 1
     versionName = "1.0.0.01"
     //library版本
