--- a/jjdxm-ijkplayer/src/main/AndroidManifest.xml
+++ b/jjdxm-ijkplayer/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest package="com.dou361.ijkplayer">
-
-
+<manifest package="com.dou361.ijkplayer"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
