--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".RemoteControlActivity"
-            android:screenOrientation="landscape"
-            android:configChanges="keyboardHidden|orientation">
+        <activity android:name=".RemoteControlInitial"
+                  android:configChanges="keyboardHidden|orientation"
+                  android:screenOrientation="landscape">
         </activity>
-        <activity android:name=".Parkin"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".RemoteControl"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape">
+        </activity>
+        <activity
+            android:name=".Parkin"
+            android:screenOrientation="portrait" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,9 +39,7 @@
         <activity
             android:name=".VideoMonitoring"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait" >
-
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".PlayerLiveActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
