--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.1'
-//        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
-//        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.5"
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.5"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -39,7 +39,7 @@ ext {
     versionCode = 1
     versionName = "1.0.0.01"
     //library版本
-    jjdxm_minSdkVersion = 9
+    jjdxm_minSdkVersion = 21
     jjdxm_versionCode = 1
     jjdxm_versionName = "1.0.0"
     jjdxm_v4 = 'com.android.support:support-v4:23.3.0'
