--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,17 +17,28 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RemoteControlInitial"
-                  android:configChanges="keyboardHidden|orientation"
-                  android:screenOrientation="landscape">
+        <activity android:name=".videomonitoring.VideoMonitor"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait" >
         </activity>
+
+        <activity android:name=".autopark.AutoParkingOut">
+
+        </activity>
+        <activity android:name=".autopark.AutoParkingIn" />
+        <activity android:name=".autopark.FullOut" />
+        <activity android:name=".autopark.HalfOut" />
+        <activity android:name=".autopark.AutoParkOut" />
         <activity
-            android:name=".RemoteControl"
+            android:name=".remotecontrol.RemoteControlInitial"
             android:configChanges="keyboardHidden|orientation"
-            android:screenOrientation="landscape">
-        </activity>
+            android:screenOrientation="landscape" />
         <activity
-            android:name=".AutoPark"
+            android:name=".remotecontrol.RemoteControl"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".autopark.AutoPark"
             android:screenOrientation="portrait" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -36,27 +47,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".VideoMonitoring"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"></activity>
-        <activity
-            android:name=".PlayerLiveActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".HPlayerActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".OriginPlayerActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".PlayerActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
